Closed
Bug 684592
Opened 11 years ago
Closed 11 years ago
Update heap-committed's description to reflect that heap-committed == heap-allocated + heap-unallocated only on Linux, not on Windows, and update heap-dirty description
Categories
(Toolkit :: about:memory, defect)
Tracking
()
RESOLVED
FIXED
mozilla9
People
(Reporter: justin.lebar+bug, Assigned: justin.lebar+bug)
References
Details
Attachments
(1 file)
3.79 KB,
patch
|
n.nethercote
:
review+
|
Details | Diff | Splinter Review |
I asserted that heap-committed == heap-allocated + heap-unallocated in bug 675216, and the description for heap-committed contains this assertion. But it's demonstrably wrong; just load up a Windows build. My mistake was reading #ifndef as #ifdef in #ifndef MALLOC_DECOMMIT stats->committed = stats->mapped #endif I just checked, and indeed on Linux, heap-committed == heap-allocated + heap-unallocated.
Assignee | ||
Comment 1•11 years ago
|
||
Might as well fix heap-dirty while I'm at it.
Assignee | ||
Updated•11 years ago
|
Summary: Update heap-committed's description to reflect that heap-committed == heap-allocated + heap-unallocated only on Linux, not on Windows → Update heap-committed's description to reflect that heap-committed == heap-allocated + heap-unallocated only on Linux, not on Windows, and update heap-dirty description
Assignee | ||
Comment 2•11 years ago
|
||
Attachment #558185 -
Flags: review?(nnethercote)
![]() |
||
Comment 3•11 years ago
|
||
Comment on attachment 558185 [details] [diff] [review] Patch v1 Review of attachment 558185 [details] [diff] [review]: ----------------------------------------------------------------- rs=me, you know much more about this stuff at this point than I do. ::: xpcom/base/nsMemoryReporterManager.cpp @@ +441,5 @@ > +#if defined(HAVE_JEMALLOC_STATS) && defined(XP_WIN) > + // heap-committed is only meaningful where we have MALLOC_DECOMMIT defined > + // (currently, just on Windows). Elsewhere, it's the same as > + // stats->mapped, which is heap-allocated + heap-unallocated. > + REGISTER(HeapCommitted); In that case, shouldn't the condition be this: #if defined(HAVE_JEMALLOC_STATS) && defined(MALLOC_DECOMMIT) ? Or is MALLOC_DECOMMIT not visible here?
Attachment #558185 -
Flags: review?(nnethercote) → review+
Assignee | ||
Comment 4•11 years ago
|
||
> Or is MALLOC_DECOMMIT not visible here?
Yeah, it's #define'd in jemalloc.c, not in a header.
![]() |
||
Comment 5•11 years ago
|
||
> Yeah, it's #define'd in jemalloc.c, not in a header.
A comment explaining that would be good!
Assignee | ||
Comment 6•11 years ago
|
||
inbound: http://hg.mozilla.org/integration/mozilla-inbound/rev/f921f632208e
Whiteboard: [inbound]
Comment 7•11 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/f921f632208e
Assignee: nobody → justin.lebar+bug
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Whiteboard: [inbound]
Target Milestone: --- → mozilla9
You need to log in
before you can comment on or make changes to this bug.
Description
•