Bug 684592 - In about:memory, update descriptions of heap-dirty and heap-committed, and only report heap-committed on Windows. rs=njn